# kJudge

./: .gitignore  README.md  build_executable.py  home.md  index.html  index.md  kjudge.spec  pyproject.toml  release.md
_layouts/: default.html
docs/: advanced_workflows.md  architecture.md  config_mechanics.md  distribution.md
docs/explanation/: architecture.md
docs/how-to/: handle-contests.md  manual-test-management.md
docs/reference/: cli.md  config-schema.md
docs/tutorials/: getting-started.md
kjudge/: __init__.py  __main__.py  cf_fetcher.py  checker.py  cli.py  config.py  contest.py  diff_view.py  exporter.py  interactive.py  runner.py  setup_wizard.py  stress.py  templates.py  tests_store.py  utils.py  watcher.py
scratch/: vjudge.html  vjudge_test.py
