[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kjudge"
version = "1.0.0"
description = "Competitive programming local judge — manage tests, fetch from Codeforces, run & diff solutions."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "kilob"}]

dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "rich>=13.0",
]

[project.scripts]
kjudge = "kjudge.cli:main"

[tool.setuptools.packages.find]
include = ["kjudge*"]
